--- a/project/tsconfig.app.json
+++ b/project/tsconfig.app.json
@@ -2,6 +2,17 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@environments/*": ["environments/*"],
+      "@shared/*": ["app/shared/*"],
+      "@components/*": ["app/presentation/components/*"],
+      "@pages/*": ["app/presentation/pages/*"],
+      "@services/*": ["app/application/services/*"],
+      "@repositories/*": ["app/infrastructure/repositories/*"],
+      "@domain/*": ["app/domain/*"]
+    },
     "outDir": "./out-tsc/app",
     "types": []
   },
